bandlanguagesite-java/src/main/java/com/bandlanguage/bandlanguagesite/compilecore/organizationmanage/parser/LanguageParser.java
// Generated from /Users/xiaov/IdeaProjects/bandlanguagesite/bandlanguagesite-java/src/main/java/com/bandlanguage/bandlanguagesite/compilecore/organizationmanage/parser/Language.g4 by ANTLR 4.9.1
package com.bandlanguage.bandlanguagesite.compilecore.organizationmanage.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Organization=1, Department=2, ParentDepartment=3, SuperiorDepartment=4, 
		SubDepartment=5, Band=6, ParentBand=7, SubBand=8, Position=9, Member=10, 
		Tool=11, Role=12, Authority=13, Reader=14, Writer=15, Speaker=16, Worker=17, 
		Administrator=18, Drama=19, File=20, Chatroom=21, MaxAuthority=22, MinAuthority=23, 
		Deadline=24, NewStaff=25, SeniorStaff=26, Show=27, Establish=28, Join=29, 
		Revoke=30, Set=31, Change=32, Edit=33, Delete=34, Merge=35, Move=36, Appoint=37, 
		Relieve=38, Grant=39, Disable=40, Enable=41, SendMsg=42, Accept=43, Dispatch=44, 
		Publish=45, CancelPub=46, Exist=47, NotExist=48, Appear=49, Have=50, Incumbent=51, 
		Leaved=52, Me=53, At=54, Make=55, From=56, Quantifier=57, TimeUnit=58, 
		MoreThan=59, LessThan=60, Equals=61, And=62, Or=63, Inside=64, With=65, 
		Of=66, If=67, Then=68, Concurrent=69, Else=70, Comma=71, Dot=72, Number=73, 
		String=74, Identifier=75, Ws=76, Comment=77;
	public static final int
		RULE_script = 0, RULE_stmt = 1, RULE_simpleStmt = 2, RULE_complexStmt = 3, 
		RULE_subject_predicate_object_stmt = 4, RULE_subject_predicate_attribute_object_stmt = 5, 
		RULE_subject_adverbial_predicate_attribute_object_stmt = 6, RULE_subject_adverbial_predicate_complement_attribute_object_stmt = 7, 
		RULE_ifStmt = 8, RULE_concurrentStmt = 9, RULE_judgeStmt = 10, RULE_subject = 11, 
		RULE_predicate = 12, RULE_object = 13, RULE_attribute = 14, RULE_adverbial = 15, 
		RULE_complement = 16, RULE_place_adverbial = 17, RULE_preposition_object = 18, 
		RULE_isExist = 19, RULE_notExist = 20, RULE_time_complement = 21, RULE_comparator = 22, 
		RULE_logic_operator = 23, RULE_noun = 24, RULE_verb = 25, RULE_adjective = 26, 
		RULE_preposition = 27, RULE_direction = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "stmt", "simpleStmt", "complexStmt", "subject_predicate_object_stmt", 
			"subject_predicate_attribute_object_stmt", "subject_adverbial_predicate_attribute_object_stmt", 
			"subject_adverbial_predicate_complement_attribute_object_stmt", "ifStmt", 
			"concurrentStmt", "judgeStmt", "subject", "predicate", "object", "attribute", 
			"adverbial", "complement", "place_adverbial", "preposition_object", "isExist", 
			"notExist", "time_complement", "comparator", "logic_operator", "noun", 
			"verb", "adjective", "preposition", "direction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\u673A\u6784'", "'\u90E8\u95E8'", "'\u7236\u90E8\u95E8'", "'\u4E0A\u7EA7\u90E8\u95E8'", 
			null, "'\u5E2E\u533A'", "'\u7236\u5E2E\u533A'", "'\u5B50\u5E2E\u533A'", 
			"'\u5C97\u4F4D'", "'\u6210\u5458'", "'\u5DE5\u5177'", "'\u89D2\u8272'", 
			"'\u6743\u9650'", "'\u8BFB\u8005'", "'\u5199\u8005'", "'\u8A00\u8005'", 
			"'\u5DE5\u8005'", "'\u7BA1\u7406\u5458'", "'\u5267\u672C'", "'\u6587\u6863'", 
			"'\u6D88\u606F\u677F'", null, null, null, "'\u65B0\u5458\u5DE5'", "'\u8001\u5458\u5DE5'", 
			null, null, null, null, "'\u8BBE\u5B9A'", null, null, null, null, null, 
			null, "'\u514D\u9664'", "'\u6388\u4E88'", "'\u505C\u7528'", "'\u542F\u7528'", 
			null, null, null, null, "'\u53D6\u6D88\u53D1\u5E03'", "'\u5B58\u5728'", 
			"'\u4E0D\u5B58\u5728'", null, null, "'\u5728\u804C\u7684'", "'\u79BB\u804C\u7684'", 
			"'\u6211'", null, null, "'\u4ECE'", null, null, null, null, "'\u7B49\u4E8E'", 
			"'\u4E14'", "'\u6216'", null, "'\u548C'", "'\u7684'", null, null, null, 
			"'\u5426\u5219'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Organization", "Department", "ParentDepartment", "SuperiorDepartment", 
			"SubDepartment", "Band", "ParentBand", "SubBand", "Position", "Member", 
			"Tool", "Role", "Authority", "Reader", "Writer", "Speaker", "Worker", 
			"Administrator", "Drama", "File", "Chatroom", "MaxAuthority", "MinAuthority", 
			"Deadline", "NewStaff", "SeniorStaff", "Show", "Establish", "Join", "Revoke", 
			"Set", "Change", "Edit", "Delete", "Merge", "Move", "Appoint", "Relieve", 
			"Grant", "Disable", "Enable", "SendMsg", "Accept", "Dispatch", "Publish", 
			"CancelPub", "Exist", "NotExist", "Appear", "Have", "Incumbent", "Leaved", 
			"Me", "At", "Make", "From", "Quantifier", "TimeUnit", "MoreThan", "LessThan", 
			"Equals", "And", "Or", "Inside", "With", "Of", "If", "Then", "Concurrent", 
			"Else", "Comma", "Dot", "Number", "String", "Identifier", "Ws", "Comment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Language.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ScriptContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> Dot() { return getTokens(LanguageParser.Dot); }
		public TerminalNode Dot(int i) {
			return getToken(LanguageParser.Dot, i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(58);
				stmt();
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Dot) {
					{
					setState(59);
					match(Dot);
					}
				}

				}
				}
				setState(64); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Organization) | (1L << Department) | (1L << ParentDepartment) | (1L << SuperiorDepartment) | (1L << SubDepartment) | (1L << Band) | (1L << ParentBand) | (1L << SubBand) | (1L << Position) | (1L << Member) | (1L << Tool) | (1L << Role) | (1L << Authority) | (1L << Reader) | (1L << Writer) | (1L << Speaker) | (1L << Worker) | (1L << Administrator) | (1L << Drama) | (1L << File) | (1L << Chatroom) | (1L << MaxAuthority) | (1L << MinAuthority) | (1L << Deadline) | (1L << NewStaff) | (1L << SeniorStaff) | (1L << Show) | (1L << Establish) | (1L << Join) | (1L << Revoke) | (1L << Set) | (1L << Change) | (1L << Edit) | (1L << Delete) | (1L << Merge) | (1L << Move) | (1L << Appoint) | (1L << Grant) | (1L << Disable) | (1L << Enable) | (1L << SendMsg) | (1L << Accept) | (1L << Dispatch) | (1L << Publish) | (1L << CancelPub) | (1L << Appear) | (1L << Have) | (1L << Me) | (1L << At) | (1L << Make) | (1L << From))) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & ((1L << (If - 67)) | (1L << (Number - 67)) | (1L << (String - 67)) | (1L << (Identifier - 67)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public SimpleStmtContext simpleStmt() {
			return getRuleContext(SimpleStmtContext.class,0);
		}
		public ComplexStmtContext complexStmt() {
			return getRuleContext(ComplexStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				simpleStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				complexStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleStmtContext extends ParserRuleContext {
		public Subject_predicate_object_stmtContext subject_predicate_object_stmt() {
			return getRuleContext(Subject_predicate_object_stmtContext.class,0);
		}
		public Subject_predicate_attribute_object_stmtContext subject_predicate_attribute_object_stmt() {
			return getRuleContext(Subject_predicate_attribute_object_stmtContext.class,0);
		}
		public Subject_adverbial_predicate_attribute_object_stmtContext subject_adverbial_predicate_attribute_object_stmt() {
			return getRuleContext(Subject_adverbial_predicate_attribute_object_stmtContext.class,0);
		}
		public Subject_adverbial_predicate_complement_attribute_object_stmtContext subject_adverbial_predicate_complement_attribute_object_stmt() {
			return getRuleContext(Subject_adverbial_predicate_complement_attribute_object_stmtContext.class,0);
		}
		public JudgeStmtContext judgeStmt() {
			return getRuleContext(JudgeStmtContext.class,0);
		}
		public SimpleStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitSimpleStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleStmtContext simpleStmt() throws RecognitionException {
		SimpleStmtContext _localctx = new SimpleStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simpleStmt);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				subject_predicate_object_stmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				subject_predicate_attribute_object_stmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				subject_adverbial_predicate_attribute_object_stmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				subject_adverbial_predicate_complement_attribute_object_stmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(74);
				judgeStmt(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComplexStmtContext extends ParserRuleContext {
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public AdverbialContext adverbial() {
			return getRuleContext(AdverbialContext.class,0);
		}
		public TerminalNode Comma() { return getToken(LanguageParser.Comma, 0); }
		public ConcurrentStmtContext concurrentStmt() {
			return getRuleContext(ConcurrentStmtContext.class,0);
		}
		public ComplexStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complexStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitComplexStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComplexStmtContext complexStmt() throws RecognitionException {
		ComplexStmtContext _localctx = new ComplexStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_complexStmt);
		int _la;
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << At) | (1L << Make) | (1L << From))) != 0)) {
					{
					setState(77);
					adverbial();
					setState(78);
					match(Comma);
					}
				}

				setState(82);
				ifStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				concurrentStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Subject_predicate_object_stmtContext extends ParserRuleContext {
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public SubjectContext subject() {
			return getRuleContext(SubjectContext.class,0);
		}
		public Subject_predicate_object_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subject_predicate_object_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitSubject_predicate_object_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Subject_predicate_object_stmtContext subject_predicate_object_stmt() throws RecognitionException {
		Subject_predicate_object_stmtContext _localctx = new Subject_predicate_object_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_subject_predicate_object_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Me || _la==Identifier) {
				{
				setState(86);
				subject();
				}
			}

			setState(89);
			predicate();
			setState(90);
			object(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Subject_predicate_attribute_object_stmtContext extends ParserRuleContext {
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public SubjectContext subject() {
			return getRuleContext(SubjectContext.class,0);
		}
		public Subject_predicate_attribute_object_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subject_predicate_attribute_object_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitSubject_predicate_attribute_object_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Subject_predicate_attribute_object_stmtContext subject_predicate_attribute_object_stmt() throws RecognitionException {
		Subject_predicate_attribute_object_stmtContext _localctx = new Subject_predicate_attribute_object_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subject_predicate_attribute_object_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Me || _la==Identifier) {
				{
				setState(92);
				subject();
				}
			}

			setState(95);
			predicate();
			setState(96);
			attribute();
			setState(97);
			object(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Subject_adverbial_predicate_attribute_object_stmtContext extends ParserRuleContext {
		public AdverbialContext adverbial() {
			return getRuleContext(AdverbialContext.class,0);
		}
		public TerminalNode Comma() { return getToken(LanguageParser.Comma, 0); }
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public SubjectContext subject() {
			return getRuleContext(SubjectContext.class,0);
		}
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public Subject_adverbial_predicate_attribute_object_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subject_adverbial_predicate_attribute_object_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitSubject_adverbial_predicate_attribute_object_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Subject_adverbial_predicate_attribute_object_stmtContext subject_adverbial_predicate_attribute_object_stmt() throws RecognitionException {
		Subject_adverbial_predicate_attribute_object_stmtContext _localctx = new Subject_adverbial_predicate_attribute_object_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_subject_adverbial_predicate_attribute_object_stmt);
		int _la;
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				adverbial();
				setState(100);
				match(Comma);
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Me || _la==Identifier) {
					{
					setState(101);
					subject();
					}
				}

				setState(104);
				predicate();
				setState(106);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(105);
					attribute();
					}
					break;
				}
				setState(108);
				object(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Me || _la==Identifier) {
					{
					setState(110);
					subject();
					}
				}

				setState(113);
				adverbial();
				setState(114);
				predicate();
				setState(116);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(115);
					attribute();
					}
					break;
				}
				setState(118);
				object(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Subject_adverbial_predicate_complement_attribute_object_stmtContext extends ParserRuleContext {
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ComplementContext complement() {
			return getRuleContext(ComplementContext.class,0);
		}
		public AdverbialContext adverbial() {
			return getRuleContext(AdverbialContext.class,0);
		}
		public TerminalNode Comma() { return getToken(LanguageParser.Comma, 0); }
		public SubjectContext subject() {
			return getRuleContext(SubjectContext.class,0);
		}
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public Subject_adverbial_predicate_complement_attribute_object_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subject_adverbial_predicate_complement_attribute_object_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitSubject_adverbial_predicate_complement_attribute_object_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Subject_adverbial_predicate_complement_attribute_object_stmtContext subject_adverbial_predicate_complement_attribute_object_stmt() throws RecognitionException {
		Subject_adverbial_predicate_complement_attribute_object_stmtContext _localctx = new Subject_adverbial_predicate_complement_attribute_object_stmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_subject_adverbial_predicate_complement_attribute_object_stmt);
		int _la;
		try {
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << At) | (1L << Make) | (1L << From))) != 0)) {
					{
					setState(122);
					adverbial();
					setState(123);
					match(Comma);
					}
				}

				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Me || _la==Identifier) {
					{
					setState(127);
					subject();
					}
				}

				setState(130);
				predicate();
				setState(132);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(131);
					attribute();
					}
					break;
				}
				setState(134);
				object(0);
				setState(135);
				complement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Me || _la==Identifier) {
					{
					setState(137);
					subject();
					}
				}

				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << At) | (1L << Make) | (1L << From))) != 0)) {
					{
					setState(140);
					adverbial();
					}
				}

				setState(143);
				predicate();
				setState(145);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
				case 1:
					{
					setState(144);
					attribute();
					}
					break;
				}
				setState(147);
				object(0);
				setState(148);
				complement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStmtContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(LanguageParser.If, 0); }
		public JudgeStmtContext judgeStmt() {
			return getRuleContext(JudgeStmtContext.class,0);
		}
		public List<TerminalNode> Comma() { return getTokens(LanguageParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(LanguageParser.Comma, i);
		}
		public TerminalNode Then() { return getToken(LanguageParser.Then, 0); }
		public List<SimpleStmtContext> simpleStmt() {
			return getRuleContexts(SimpleStmtContext.class);
		}
		public SimpleStmtContext simpleStmt(int i) {
			return getRuleContext(SimpleStmtContext.class,i);
		}
		public TerminalNode Else() { return getToken(LanguageParser.Else, 0); }
		public IfStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStmtContext ifStmt() throws RecognitionException {
		IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(If);
			setState(153);
			judgeStmt(0);
			setState(154);
			match(Comma);
			setState(155);
			match(Then);
			setState(156);
			simpleStmt();
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Comma) {
				{
				setState(157);
				match(Comma);
				setState(158);
				match(Else);
				setState(159);
				simpleStmt();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
